# lego-bot

./: .gitignore  Offer.py  Parser.py  README.md  Scraper.py  Set.py  db.py  main.ipynb  pyproject.toml  requirements.txt  tutorial.ipynb
.github/workflows/: tests.yml
database/: database.db  sets.csv
src/lego_bot/: Offer.py  Parser.py  Scraper.py  Set.py  database.py  db.py  main.ipynb
src/lego_bot/database/: database.db
src/lego_bot_rabadaba1/: Offer.py  Scraper.py
tests/: test_parser.py
