[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lego_bot_rabadaba1"
version = "1.0"
authors = [
  {name = "rabadaba1", email="krabczewski@gmail.com"}
]
description = "Program for getting information about lego sets from olx.pl"
readme = "README.md"
requires-python = ">=3.8.0"
keywords = ["lego", "olx", "bot", "web-scrapping", "prediction", "price", "investing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "pytest",
    "pytest-cov"
]

[project.urls]
"Hompage" = "https://github.com/RabaDaba1/lego-bot"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.gitignore",
]